keyterms/static/css/keyterms.css
/* CSS for KeytermsXBlock */

h1 {
    margin: 0 !important;
}

h2 {
    font-size: 20px;
    font-weight: bold;
}

p.glossarymsg {
    border-left: 5px solid #74c4e1 !important;
    padding: 20px !important;
    margin-bottom: 10px !important;
    margin-top: 10px !important;
    background-color: #eef2f4 !important;
}

.keyterms_block .count {
    font-weight: bold;
}

.keyterms_block p {
    margin-bottom: 0 !important;
}

*,
*::before,
*::after {
    box-sizing: border-box;
}

.keytermdiv {
    font-size: 14px;
    position: relative;
    display: flex;
    padding: 15px;
}

.keytermdiv .error-message {
    display: flex;
    align-items: center;
    padding: 0 8px;
    font-size: 12px;
    background: #d30909;
    color: #fff;
    height: 24px;
}

.keytermdiv .error-message:empty {
    opacity: 0;
}

.keyterm-title {
    white-space: nowrap;
    overflow: hidden;
    color: #0074B5;
    margin-right: 40px;
    text-overflow: ellipsis;
    align-items: center;
    font-size: 16px;
    font-weight: 800;
}


/* .allKeytermsList {
    columns: 2;
    -webkit-columns: 2;
    -moz-columns: 2;
    list-style-position: inside;
    list-style-type: disc !important;
} */

.card-header {
    padding: 0.25rem 0.25rem !important;
}

.card:nth-child(odd) {
    background-color: #d4d4d4 !important;
}

.card:nth-child(even) {
    background-color: white !important;
}

.card-header .fa {
    transition: .3s transform ease-in-out;
    font-style: normal !important;
}

.card-header .fa .pull-right {
    margin-left: 0.3em;
    float: right;
}

.card-header .collapsed .fa {
    transform: rotate(90deg);
}

.bullets {
    list-style-position: inside;
    list-style-type: disc !important;
}

.save-btn {
    background-color: #4CAF50;
    border: none;
    color: white;
    text-align: left !important;
    text-decoration: none;
    cursor: pointer;
    flex: 1;
    margin: 2px;
    padding: 5px;
    display: inline-block;
    border-radius: 10px;
    /*min-width: 100%;*/
    max-width: 46%;
    vertical-align: top;
    font-size: 15px;
}

[class*="view-"] .modal-lg.modal-editor .modal-content {
    height: 75%;
}

.input-group {
    display: flex;
}

.outline-box {
    margin: 5px;
}

.center {
    margin: 0;
    position: absolute;
    top: 40%;
    left: 50%;
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
}

.row {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    margin-left: 0px !important;
    margin-right: 0px !important;
}

.row>* {
    /* The border is just to visualize columns during layout. Remove in finished site. */
    /*border: 1px solid #BBBBBB;*/
    padding: 15px;
    position: relative;
}

.one-sixth {
    width: 16.666666%;
}

.one-fifth {
    width: 20%;
}

.one-fourth {
    width: 25%;
}

.one-third {
    width: 33.333333%;
}

.two-fifths {
    width: 40%;
}

.one-half {
    width: 50%;
}

.two-thirds {
    width: 66.666666%;
}

.three-fifths {
    width: 60%;
}

.three-fourths {
    width: 75%;
}

.four-fifths {
    width: 80%;
}

.five-sixths {
    width: 83.333333%
}

.full {
    width: 100%;
}

.active {
    background-color: grey;
}


/* other helper classes */

.right {
    float: right;
    margin-right: 10px;
    margin-bottom: 10px;
}

.left {
    margin-right: 10px;
    margin-left: 10px;
    margin-bottom: 10px;
}

.center {
    display: block;
    margin: 0 auto;
}

.upper-left,
.upper-right,
.lower-right,
.lower-left {
    position: absolute;
    margin: 0;
}

.upper-left {
    top: 15px;
    left: 15px;
}

.upper-right {
    top: 15px;
    right: 15px;
}

.lower-right {
    bottom: 15px;
    right: 15px;
}

.lower-left {
    bottom: 15px;
    left: 15px;
}

.modal-content {
    padding: 10px !important;
}


/* media queries */

@media screen and (max-width: 600px) {
    .one-sixth,
    .one-fifth,
    .one-fourth,
    .one-third,
    .two-fifths,
    .one-half,
    .three-fifths,
    .two-thirds,
    .four-fifths,
    .five-sixths,
    .full {
        padding: 10px;
        width: 100%;
    }
    .hide-mobile {
        display: none;
    }
    .static-mobile {
        position: static;
    }
}

@media (min-width: 601px) {
    .hide-desktop {
        display: none;
    }
    .static-desktop {
        position: static;
    }
}


/* Defaults for lesson summary */

.lessonsummary li {
    display: list-item !important;
}

.lessonsummary ul {
    display: block !important;
    list-style-type: disc !important;
    margin-top: 1em !important;
    margin-bottom: 1em !important;
    margin-left: 0 !important;
    margin-right: 0 !important;
    padding-left: 40px !important;
}

.lessonsummary table {
    display: table !important;
    border-collapse: separate !important;
    border-spacing: 2px !important;
    border-color: gray !important;
}

.lessonsummary tbody {
    display: table-row-group !important;
    vertical-align: middle !important;
    border-color: inherit !important;
}

.lessonsummary td {
    display: table-cell !important;
    vertical-align: inherit !important;
}

.lessonsummary tr {
    display: table-row !important;
    vertical-align: inherit !important;
    border-color: inherit !important;
}

.lessonsummary th {
    display: table-cell !important;
    vertical-align: inherit !important;
    font-weight: bold !important;
    text-align: center !important;
}

.lessonsummary thead {
    display: table-header-group !important;
    vertical-align: middle !important;
    border-color: inherit !important;
}

